--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "defi-tutorial",
-  "version": "0.1.0",
-  "description": "DeFi Token Staking App",
-  "author": "gregory@dappuniversity.com",
+  "name": "tutoring",
+  "version": "0.0.1",
+  "description": "Tutoring App",
+  "author": "undefined@mindit.io",
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
@@ -15,6 +15,7 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "identicon.js": "^2.3.3",
+    "ipfs-http-client": "^33.1.1",
     "react": "16.8.4",
     "react-bootstrap": "^1.5.2",
     "react-dom": "16.8.4",
